@@ -224,9 +224,8 @@ struct
    "unknown size for operand" },
 { W_LONG_UNSUPPORTED, ERROR_LEVEL_WARNING,
    "'%s' 'long' not supported , declared as 'int'." },
-{ E_LITERAL_GENERIC, ERROR_LEVEL_ERROR,
-   //"illegal cast of LITERAL value to 'generic' pointer: assuming 'xdata' pointer" },
-   "illegal cast of LITERAL value to 'generic' pointer" },
+{ W_LITERAL_GENERIC, ERROR_LEVEL_WARNING,
+   "cast of LITERAL value to 'generic' pointer" },
 { E_SFR_ADDR_RANGE, ERROR_LEVEL_ERROR,
    "%s '%s' address out of range" },
 { E_BITVAR_STORAGE, ERROR_LEVEL_ERROR,
@@ -303,7 +302,7 @@ struct
    "constant is out of range %s" },
 { W_CODE_UNREACH, ERROR_LEVEL_PEDANTIC,
    "unreachable code" },
-{ E_NONPTR2_GENPTR, ERROR_LEVEL_ERROR,
+{ W_NONPTR2_GENPTR, ERROR_LEVEL_WARNING,
    "non-pointer type cast to generic pointer" },
 { W_POSSBUG, ERROR_LEVEL_WARNING,
    "possible code generation error at line %d,\n"
